--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,15 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
-                <intent-filter>
-                    <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-                    <category android:name="android.intent.category.LAUNCHER" />
-                </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity
-            android:name=".FormularioAdicionarActivity">
-
-        </activity>
+        <activity android:name=".FormularioAdicionarActivity"></activity>
+        <activity android:name=".FormularioCategoria"></activity>
+        <activity android:name=".ListaReceitaDespesaActivity"></activity>
     </application>
+
 </manifest>
